@@ -49,6 +49,7 @@ Fixed a bug where if HolographicDisplays is present but not enabled on the serve
 
 TODO (any TODO which is not specifically code), mainly used for reminders to update documentation
 add new commands help messages to messages.yml
+Add permissions for all new commands to plugin.yml
 add /teama chatspy to spigot plugin page
 add /team title to wiki and spigot plugin page (betterteams.title.others) 
 add betterteams.title.self, betterteams.title.color.color, betterteams.title.color.format
@@ -56,7 +57,8 @@ add /team top betterteams.top
 Add /team rank betterteams.rank
 add /teama version betterteams.admin.version
 add /teama home <team> betterteams.admin.home
-Seperate unban, sethome and demote
+Add betterteams.cooldown.bypass
+Separate unban, sethome and demote permissions
 Updates config and messages.yml version
 
 
